--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="container">
         <h1 style="text-align: center; font-size: 52px; color: steelblue">
           You are not <br />
-          eligible for <span style="color: crimson">Hike</span>😜
+          eligible for <span style="color: crimson">Bonus</span>😜
         </h1>
         <div class="product">
           <p>Happy April Fool - Product Team</p>
